// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton: Component should render checked 1`] = `
<CheckboxComponent
  id="id"
  isEdit={true}
  value="value"
>
  radio
</CheckboxComponent>
`;

exports[`RadioButton: Component should render correctly 1`] = `
<CheckboxComponent
  id="id"
  isEdit={true}
  value="value 2"
>
  radio
</CheckboxComponent>
`;
